config/openstack/documentation/operations-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment

metadata:
  name: operations
  namespace: documentation

spec:
  replicas: 2
  selector:
    matchLabels:
      app: operations
  template:
    metadata:
      labels:
        app: operations
    spec:
      nodeSelector:
        zone: farm
      terminationGracePeriodSeconds: 300
      containers:
        - name: operations
          image: docker.mo.sap.corp/monsoon/cc-ops-documentation-ui:latest
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            timeoutSeconds: 120
            initialDelaySeconds: 30
