config/openstack/documentation/operations-svc.yaml
kind: Service
apiVersion: v1

metadata:
  name: operations
  namespace: documentation

spec:
  selector:
    name: operations
  ports:
    - port: 80
