config/openstack/documentation/operations-ingress-eu-de-1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: operations
  namespace: documentation
spec:
  tls:
     - secretName: operations
       hosts: [operations.eu-de-1.cloud.sap]
  rules:
  - host: operations.eu-de-1.cloud.sap
    http:
      paths:
      - path: /
        backend:
          serviceName: operations
          servicePort: 80
